freebsd-glue (0.2.21) UNRELEASED; urgency=medium

  * Add myself to Uploaders.
  * No longer Build-Depends specifically on gcc-4.9 (gcc-5 and gcc-6
    are both fine).
  * Fixes for cross building:
    - don't override $CC (as explained by Helmut Grohne, it forced use
      of the build architecture compiler).

 -- Steven Chamberlain <steven@pyro.eu.org>  Wed, 02 Mar 2016 14:06:22 +0000

freebsd-glue (0.2.20) unstable; urgency=low

  * Upload to unstable
  
  [ Steven Chamberlain ]
  * Switch to gcc-4.9 (Closes: #751309)
  * Remove funopen, fwopen and fropen definitions, now provided by libbsd
    (Closes: #759249)

 -- Christoph Egger <christoph@debian.org>  Mon, 25 Aug 2014 13:17:44 -0700

freebsd-glue (0.2.19) unstable; urgency=low

  * Add MAXHOSTNAMELEN fallback.
  * Add isnumber().

 -- Robert Millan <rmh@debian.org>  Sat, 22 Mar 2014 20:27:53 +0100

freebsd-glue (0.2.18) experimental; urgency=low

  * Add PATH_MAX and MAXPATHLEN fallbacks for systems that lack them.
  * Uploading to experimental as kfreebsd-kernel-headers 10.0 (needed by
    capsicum) is only available there.

 -- Robert Millan <rmh@debian.org>  Tue, 21 Jan 2014 12:48:14 +0100

freebsd-glue (0.2.17) unstable; urgency=low

  * Remove dependency on libutil-freebsd-dev (it was only needed during
    transition of libutil.h).
  * Allow users to force use of embedded headers even when building
    natively, by setting __FREEBSD_GLUE_USE_EMBEDDED_HEADERS macro. This
    makes it possible to detect FTBFS errors that affect other platforms
    also on GNU/kFreeBSD.
  * Update embedded copy of <sys/elf_common.h>.
  * Add getbsize().
  * Add arc4random_buf() prototype to <stdlib.h>.
  * Add _PATH_GBDE, _PATH_GELI and _PATH_MDCONFIG to <paths.h>.
  * Add swapon() and swapoff() prototypes to <unistd.h>.
  * Add basename_r().
  * Add capsicum(4) family of functions.

 -- Robert Millan <rmh@debian.org>  Mon, 20 Jan 2014 23:45:07 +0100

freebsd-glue (0.2.16) unstable; urgency=low
