@@ -9,7 +9,7 @@ main (int argc, char **argv)
   int fd;
   Elf32_Ehdr ehdr;
 
-  fd = open (argv[0], O_RDONLY);
+  fd = open (argv[1], O_RDONLY);
   if (fd == -1)
     perror ("open");
 
