@@ -1,0 +1,1 @@
+int main (int argc, char **argv) { return 0; }
